NGSTACK-342 - Add loading spinner

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -198,7 +198,7 @@
                             <input type="hidden" id="ezrepoforms_content_edit_fieldsData_remote_media_value_width" name="ezrepoforms_content_edit[fieldsData][remote_media][value][width]" class="media-width">
                             <input type="hidden" id="ezrepoforms_content_edit_fieldsData_remote_media_value_height" name="ezrepoforms_content_edit[fieldsData][remote_media][value][height]" class="media-height">
 
-                            <input type="button" @click="browseMedia" class="ngremotemedia-remote-file button" value="Browse media">
+                            <input type="button" @click="handleBrowseMediaClicked" class="ngremotemedia-remote-file button" value="Browse media">
 
                             <div class="ngremotemedia-local-file-container">
                                 <input type="button" class="btn btn-default ngremotemedia-local-file button upload-from-disk" value="Quick upload">
