--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -116,99 +116,12 @@
                                             <input type="button" class="btn btn-default ngremotemedia-local-file button upload-from-disk" value="Quick upload">
                                         </div>
                                     </div>
-                                    <media-modal :folders="folders" v-if="modalOpen" @close="handleModalClose" @media-selected="handleMediaSelected"/>
+                                    <media-modal :folders="folders" :selected-media-id="selectedImage.id" v-if="modalOpen" @close="handleModalClose" @media-selected="handleMediaSelected"/>
                                 </div>
                                 <input type="hidden" name="ContentObjectAttribute_id[]" value="4601"/>
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <div id="adminv2">
-                    <h2>Admin v2</h2>
-
-
-                    <script type="text/javascript">
-                        NgRemoteMediaTranslations = {
-                            'Search for media': "Search for media",
-                            'Load more': "Load more",
-                            'Upload new media': 'Upload new media',
-                            'No results': 'No results',
-                            'Alternate text': 'Alternate text',
-                            'Class': 'CSS class',
-                            'Create new folder?': 'Create new folder?',
-                            'Folder': 'Folder',
-                            'All': 'All',
-                            'Add tag': 'Add tag',
-                            'Media type': 'Media type',
-                            'Image': 'Image and documents',
-                            'Video': 'Video',
-                            'Loading...': 'Loading...',
-                            'Cancel': 'Cancel',
-                            'Save all': 'Save all',
-                            'Generate': 'Generate',
-                            'Caption': 'Caption',
-                            'by': 'by',
-                            'name': 'name',
-                            'tag': 'tag',
-                            'Image is to small for this version': 'Image is to small for this version',
-                            'close': 'Close',
-                            'next': 'Next 25 &gt;',
-                            'prev': '&lt; Previous 25'
-                        };
-
-                        RemoteMediaSettings = {
-                            'ez_contentobject_id': 283,
-                            'ez_contentobject_version': 8,
-                            'url_prefix': '/admin'
-                        };
-                    </script>
-
-                    <div class="ngremotemedia-type" data-available-variations="{&quot;full&quot;:[500,300],&quot;mobile&quot;:[500,500],&quot;fixed_height&quot;:[0,500],&quot;fixed_width&quot;:[500,0]}">
-
-                        <div class="ngremotemedia-image" id="ngremotemedia-preview-4601"></div>
-
-                        <div class="tagger">
-                            <div class="ngremotemedia-alttext">
-                                <div class="ez-data-source__field ez-data-source__field--alt_text">
-                                    <div class="ez-data-source__label-wrapper">
-                                        <label class="ez-data-source__label" for="ezrepoforms_content_edit_fieldsData_remote_media_value_alt_text">Alt text</label>
-                                    </div>
-                                    <div class="ez-data-source__input-wrapper"><input type="text" id="ezrepoforms_content_edit_fieldsData_remote_media_value_alt_text" name="ezrepoforms_content_edit[fieldsData][remote_media][value][alt_text]" class="ez-data-source__input form-control"></div>
-                                </div>
-
-                            </div>
-                            <div id="ngremotemedia-tags-4601">
-                                <div class="ez-data-source__field ez-data-source__field--tags">
-                                    <div class="ez-data-source__label-wrapper">
-                                        <label class="ez-data-source__label" for="ezrepoforms_content_edit_fieldsData_remote_media_value_tags">Tags</label>
-                                    </div>
-                                    <div class="ez-data-source__input-wrapper"><input type="text" id="ezrepoforms_content_edit_fieldsData_remote_media_value_tags" name="ezrepoforms_content_edit[fieldsData][remote_media][value][tags]" class="media-tags ez-data-source__input form-control"></div>
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <div id="ngremotemedia-buttons-4601" class="ngremotemedia-buttons" data-id="4601" data-contentobject-id="283" data-version="8">
-
-                            <input type="hidden" id="ezrepoforms_content_edit_fieldsData_remote_media_value_resource_id" name="ezrepoforms_content_edit[fieldsData][remote_media][value][resource_id]" class="media-id">
-                            <input type="hidden" id="ezrepoforms_content_edit_fieldsData_remote_media_value_resource_url" name="ezrepoforms_content_edit[fieldsData][remote_media][value][resource_url]" class="media-url">
-                            <input type="hidden" id="ezrepoforms_content_edit_fieldsData_remote_media_value_size" name="ezrepoforms_content_edit[fieldsData][remote_media][value][size]" class="media-size">
-                            <input type="hidden" id="ezrepoforms_content_edit_fieldsData_remote_media_value_media_type" name="ezrepoforms_content_edit[fieldsData][remote_media][value][media_type]" class="media-type">
-                            <input type="hidden" id="ezrepoforms_content_edit_fieldsData_remote_media_value_width" name="ezrepoforms_content_edit[fieldsData][remote_media][value][width]" class="media-width">
-                            <input type="hidden" id="ezrepoforms_content_edit_fieldsData_remote_media_value_height" name="ezrepoforms_content_edit[fieldsData][remote_media][value][height]" class="media-height">
-
-                            <input type="button" @click="handleBrowseMediaClicked" class="ngremotemedia-remote-file button" value="Browse media">
-
-                            <div class="ngremotemedia-local-file-container">
-                                <input type="button" class="btn btn-default ngremotemedia-local-file button upload-from-disk" value="Quick upload">
-                            </div>
-                        </div>
-
-                        <media-modal :folders="folders" v-if="modalOpen" @close="handleModalClose"/>
-                    </div>
-
-
                 </div>
 
                 <input type="submit">
