--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -91,7 +91,7 @@
 
                                     <div class="ngremotemedia-image" v-init:selected-image="RemoteMediaSelectedImage">
                                         <div class="image-wrap">
-                                            <img v-if="selectedImage.type==='image'" :src="selectedImage.url"/>
+                                            <img v-if="selectedImage.type==='image'" :src="selectedImage.url" ref="image"/>
                                             <i v-else="selectedImage.type!=='image'" :class="nonImagePreviewClass" class="ng-icon big"></i>
                                         </div>
 
