NGSTACK-342 Fix bug when uploading file after removing file

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -133,7 +133,7 @@
                                                 <Label for="new_file">
                                                     Upload
                                                 </Label>
-                                                <input hidden id="new_file" name="new_file" type="file" @change="handleFileInputChange">
+                                                <input hidden id="new_file" name="new_file" type="file" @change="handleFileInputChange" ref="fileInput">
                                             </button>
                                         </div>
                                     </div>
