NGSTACK-342 Fix js variables scoping

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -64,7 +64,7 @@
                                         'url_prefix': "/ngadminui"
                                     };
 
-                                    RemoteMediaSelectedImage = {
+                                    RemoteMediaSelectedImage_23 = {
                                         url: 'https://res-5.cloudinary.com/marko-ab-i/image/upload/c_limit,h_600,w_600/Time_to_celebrate_Kverneland_Group_s_140_years_anniversary_png_g5h1cnw6el',
                                         type: "image",
                                         name: 'Time_to_celebrate_Kverneland_Group_s_140_years_anniversary_png_g5h1cnw6el',
@@ -92,7 +92,7 @@
                                     }
                                 </script>
 
-                                <div class="ngremotemedia-type" data-user-id="14">
+                                <div class="ngremotemedia-type" data-user-id="14" data-id="23">
 
                                     <div class="ngremotemedia-image" v-init:selected-image="RemoteMediaSelectedImage" v-init:config="RemoteMediaConfig">
                                         <div class="image-wrap">
