NGSTACK-342 Add translations to vue dev dummy file

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,32 +30,43 @@
                             <div class="attribute-block float-break">
                                 <script type="text/javascript">
                                     NgRemoteMediaTranslations = {
+                                        'browse_title': "Select media",
+                                        'browse_image_and_documents': "Image and documents",
+                                        'browse_video': "Video",
+                                        'browse_select_folder': "Select folder",
+                                        'browse_all_folders': "All folders",
+                                        'search': "Search (by name, tag, or both)",
+                                        'search_by_name': "Search by name",
+                                        'search_by_tag': "Search by tag",
+                                        'browse_empty_folder': "Folder is empty",
+                                        'browse_empty_folder_hint': "Upload media from your local storage",
+                                        'browse_select': "Select",
+                                        'load_more': "Load more",
                                         'Search for media': "Search for media",
                                         'Load more': "Load more",
-                                        'Upload new media': "Upload new media",
-                                        'No results': "No results",
-                                        'Alternate text': "Alternate text",
-                                        'Class': "CSS class",
-                                        'Create new folder?': "Create new folder?",
-                                        'Folder': "Folder",
-                                        'All': "All",
-                                        'Add tag': "Add tag",
-                                        'Media type': "Media type",
-                                        'Image': "Image and documents",
-                                        'Video': "Video",
-                                        'Loading...': "Loading...",
-                                        'Cancel': "Cancel",
-                                        'Save all': "Save all",
-                                        'Generate': "Generate",
-                                        'Caption': "Caption",
-                                        'by': "by",
-                                        'name': "name",
-                                        'tag': "tag",
-                                        'Image is to small for this version': "Image is to small for this version",
-
-                                        close: "Close",
-                                        next: "Next 25 &gt;",
-                                        prev: "&lt; Previous 25"
+                                        'Upload new media': 'Upload new media',
+                                        'No results': 'No results',
+                                        'Alternate text': 'Alternate text',
+                                        'Class': 'CSS class',
+                                        'Create new folder?': 'Create new folder?',
+                                        'Folder': 'Folder',
+                                        'All': 'All',
+                                        'Add tag': 'Add tag',
+                                        'Media type': 'Media type',
+                                        'Image': 'Image and documents',
+                                        'Video': 'Video',
+                                        'Loading...': 'Loading...',
+                                        'Cancel': 'Cancel',
+                                        'Save all': 'Save all',
+                                        'Generate': 'Generate',
+                                        'Caption': 'Caption',
+                                        'by': 'by',
+                                        'name': 'name',
+                                        'tag': 'tag',
+                                        'Image is to small for this version': 'Image is to small for this version',
+                                        'close': 'Close',
+                                        'next': 'Next 25 &gt;',
+                                        'prev': '&lt; Previous 25'
                                     };
 
                                     RemoteMediaSettings = {
