NGSTACK-502 Prepare translations

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,12 +33,17 @@
                                         NgRemoteMediaTranslations = {
                                             'browse_title': "Select media",
                                             'browse_image_and_documents': "Image and documents",
-                                            'browse_video': "Video",
+                                            'browse_video_and_audo': "Video and audio",
+                                            'browse_raw' : "RAW",
+                                            'browse_select_media_type': 'Select media type',
+                                            'browse_select_all_media_types': 'All media types',
                                             'browse_select_folder': "Select folder",
                                             'browse_all_folders': "All folders",
+                                            'browse_select_tag': 'Select tag',
+                                            'browse_all_tags': 'All tags',
                                             'search': "Search (by name, tag, or both)",
-                                            'search_by_name': "Search by name",
-                                            'search_by_tag': "Search by tag",
+                                            'search_by_name': "Search (by name, tag, folder, alternate text etc.)",
+                                            'search_placeholder': "Enter your search term",
                                             'browse_empty_folder': "Folder is empty",
                                             'browse_empty_folder_hint': "Upload media from your local storage",
                                             'browse_select': "Select",
